more touchups on the frontend!

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -5,20 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenRadar</title>
     <script type="module" src="/js/main.js"></script>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <nav class="top-nav">
         <div class="nav-content">
             <span class="nav-logo">OpenRadar</span>
-            <div class="nav-links">
-                <a href="#" class="active">Home</a>
-                <a href="#">Explore</a>
-                <a href="#">Leaderboard</a>
-            </div>
+            <a href="https://github.com/officialmelon/openradar" target="_blank" rel="noopener noreferrer" class="github-link">
+                Made by @officialmelon
+            </a>
         </div>
-    </nav>
+    </nav>  
 
     <div class="filter-bar">
         <div class="tabs">
@@ -33,7 +30,7 @@
         </div>
 
         <div class="info" id="leak-count">
-            2,000 leaks found
+            Network Error
         </div>
     </div>
 
