--- a/app/src/index.html
+++ b/app/src/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenRadar</title>
+    <title>OpenRadar - GitHub Secrets</title>
     <script type="module" src="/js/main.js"></script>
+    <link rel="icon" href="or_logo.png" type="image/png">
+
+    <meta property="og:title" content="OpenRadar - GitHub Secrets">
+    <meta property="og:description" content="OpenRadar is a tool designed to find leaked Github credentials that are pushed to repositories.">
+    <meta property="og:image" content="screenshot.png">
+    <meta property="og:image" content="https://open-radar.live">
+    <meta property="og:type" content="website">
+    <meta property="theme-color" content="#2BA84A">
+
 </head>
 <body>
 
