ai frontend recode, added scrolling ticker and /live socket endpoint myself (:

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -39,7 +39,15 @@
         </div>
 
         <div class="info" id="leak-count">
-            Network Error
+            Error Occured ):
+        </div>
+
+        <div class="live-repo-container">
+            <div class="ticker-wrap">
+                <div class="ticker">
+
+                </div>
+            </div>
         </div>
     </div>
 
