Slack + Updated tests

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -36,6 +36,7 @@
             <button class="tab">xAI</button>
             <button class="tab">Groq</button>
             <button class="tab">Cerebras</button>
+            <button class="tab">Slack</button>
         </div>
 
         <div class="info" id="leak-count">
