--- a/app/src/index.html
+++ b/app/src/index.html
@@ -37,6 +37,8 @@
             <button class="tab">Groq</button>
             <button class="tab">Cerebras</button>
             <button class="tab">Slack</button>
+            <button class="tab">Discord</button>
+
         </div>
 
         <div class="info" id="leak-count">
